--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -27,7 +27,7 @@ jobs:
       
       - name: Create tag
         run: |
-          git tag ${{ steps.version.outputs.version }}
+          git tag ${{ steps.version.outputs.version_tag }}
           git push --tags
 
   publish:
