--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -29,7 +29,7 @@ jobs:
             ${{ runner.os }}-go-
 
       - name: Go Build
-        run: CGO_ENABLED=1 GOOS=linux GOARCH=amd64 go build -ldflags="-w -s" -o bingus-bot
+        run: CGO_ENABLED=1 GOOS=linux GOARCH=amd64 go build -ldflags="-linkmode=external" -o bingus-bot
 
   lint:
     runs-on: ubuntu-latest
