--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -52,7 +52,7 @@ jobs:
             ${{ runner.os }}-go-
 
       - name: Go Build
-        run: CGO_ENABLED=1 GOOS=linux GOARCH=amd64 go build -ldflags="-w -s" -o bingus-bot
+        run: CGO_ENABLED=1 GOOS=linux GOARCH=amd64 go build -ldflags="-linkmode=external" -o bingus-bot
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
