--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -12,6 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       version: ${{ steps.version.outputs.version_tag }}
+      major: ${{ steps.version.outputs.major }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -28,7 +29,8 @@ jobs:
       - name: Create tag
         run: |
           git tag ${{ steps.version.outputs.version_tag }}
-          git push --tags
+          git tag -f v${{ steps.version.outputs.major }}
+          git push --force --tags
 
   publish:
     needs: release
@@ -65,4 +67,6 @@ jobs:
         with:
           context: .
           push: true
-          tags: tijmen34/bingus-bot:${{ needs.release.outputs.version }}
+          tags: |
+            tijmen34/bingus-bot:${{ needs.release.outputs.version }}
+            tijmen34/bingus-bot:${{ needs.release.outputs.major }}
