Push this tiny change as well

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -69,4 +69,4 @@ jobs:
           push: true
           tags: |
             tijmen34/bingus-bot:${{ needs.release.outputs.version }}
-            tijmen34/bingus-bot:${{ needs.release.outputs.major }}
+            tijmen34/bingus-bot:v${{ needs.release.outputs.major }}
