--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -45,4 +45,4 @@ jobs:
       - name: Lint
         uses: golangci/golangci-lint-action@v3
         with:
-          version: 1.50.1
+          version: "v1.50.1"
